src/objects/SolucionEnCuenta__c.object
<CustomObject>
    <fields>
        <fullName>Busqueda_Key_Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Busqueda Key Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SolucionesEnCuenta</relationshipLabel>
        <relationshipName>SolucionesEnCuenta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comentarios__c</fullName>
        <label>Comentarios</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SolucionesEnCuenta</relationshipLabel>
        <relationshipName>SolucionesEnCuenta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oportunidades Ganadas</fullName>
                </value>
                <value>
                    <fullName>Oportunidades en Funnel</fullName>
                </value>
                <value>
                    <fullName>Lineas de trabajo Priorizadas</fullName>
                </value>
                <value>
                    <fullName>Lineas a Explorar</fullName>
                </value>
                <value>
                    <fullName>Lineas que no Aplican en el Cliente</fullName>
                </value>
                <value>
                    <fullName>F1 - Ganada</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>F1 - Perdida</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>F2 - Negociación</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>F3 - Presentacion de la Oferta</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>F4 - Desarrollo de la Oferta</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>F5 - Definición de la Solución</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>F6 - Preoportunidad</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCV__c</fullName>
        <label>FCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Familia__c</fullName>
        <label>Familia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Fin_Contrato__c</fullName>
        <label>Fecha Fin Contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Inicio_Contrato__c</fullName>
        <label>Fecha Inicio Contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nivel_de_Compra__c</fullName>
        <label>Nivel de Compra</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proveedor__c</fullName>
        <label>Proveedor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rama__c</fullName>
        <label>Rama</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FourPlanning Reto</label>
        <referenceTo>FourPlanning_Reto__c</referenceTo>
        <relationshipLabel>SolucionesEnCuenta</relationshipLabel>
        <relationshipName>SolucionesEnCuenta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TipoSolucion__c</fullName>
        <label>TipoSolucion</label>
        <referenceTo>Solucion__c</referenceTo>
        <relationshipLabel>SolucionesEnCuenta</relationshipLabel>
        <relationshipName>SolucionesEnCuenta</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pais__c</fullName>
        <label>pais</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SolucionEnCuenta</label>
    <nameField>
        <label>Nombre de SolucionEnCuenta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SolucionesEnCuenta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>